--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro preview",
     "build": "astro build",
-    "preview": "astro preview",
+    "prev": "astro build && astro preview",
+    "ngrok": "ngrok http 3000",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.9",
+    "@astrojs/image": "^0.16.4",
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/rss": "^2.3.2",
-    "@astrojs/sitemap": "^1.2.1"
+    "@astrojs/sitemap": "^1.2.1",
+    "astro": "^2.1.9",
+    "astro-imagetools": "^0.8.1",
+    "reset-css": "^5.0.1"
+  },
+  "devDependencies": {
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
+    "prettier-plugin-astro": "^0.8.0",
+    "sass": "^1.60.0",
+    "sharp": "^0.32.0"
   }
 }
