--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "prettier-plugin-astro": "^0.8.0",
     "sass": "^1.60.0",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "wp-types": "^3.62.3"
   }
 }
