暮らしを学ぶページ作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "strictNullChecks": true,
+    "allowJs": true,
     "types": ["@astrojs/image/client"],
     "baseUrl": ".",
     "paths": {
