--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.1",
-    "astro": "^2.1.9",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.3",
     "astro-imagetools": "^0.8.1",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "axios": "^1.3.4",
