--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@wordpress/api-fetch": "^6.28.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "prettier-plugin-astro": "^0.8.0",
