--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.3",
     "astro-imagetools": "^0.8.1",
+    "dayjs": "^1.11.7",
     "reset-css": "^5.0.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@wordpress/api-fetch": "^6.28.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "prettier-plugin-astro": "^0.8.0",
