--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.2.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "prettier-plugin-astro": "^0.8.0",
