--- a/.github/workflows/workflow_dispatch_develop.yaml
+++ b/.github/workflows/workflow_dispatch_develop.yaml
@@ -6,16 +6,19 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - run: git checkout ${{ github.event.client_payload.ref }}
+      - run: echo "SITE_URL=https://ienokoto.en-gine.dev" >> $GITHUB_ENV
+      - run: echo "API_URL=https://ienokoto.en-gine.dev" >> $GITHUB_ENV
+      # インストールとビルド
       - name: Use Volta
         uses: volta-cli/action@v4
       - run: |
-          yarn install && \
-          yarn build
+          yarn install --immutable && \
+          yarn build --immutable
       # SSH 設定
       - name: SSH Deploy
         uses: shimataro/ssh-key-action@v2
-        if: github.event.client_payload.ref == 'develop'
         with:
           key: ${{ secrets.STAGING_SSH_PRIVATE_KEY }}
           name: ienokoto-staging.key
@@ -28,5 +31,4 @@ jobs:
               Port 10022
               StrictHostKeyChecking no
       - name: rsync over SSH
-        if: github.event.client_payload.ref == 'develop'
         run: rsync -r ./src/build ienokoto-staging:/home/engine0606/en-gine.dev/public_html/ienokoto/build
