--- a/.github/workflows/workflow_dispatch_develop.yaml
+++ b/.github/workflows/workflow_dispatch_develop.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: git checkout ${{ github.event.client_payload.ref }}
       - run: echo "SITE_URL=https://ienokoto.en-gine.dev" >> $GITHUB_ENV
-      - run: echo "API_URL=https://ienokoto.en-gine.dev" >> $GITHUB_ENV
+      - run: echo "API_URL=https://ienokoto.jp" >> $GITHUB_ENV
       # インストールとビルド
       - name: Use Volta
         uses: volta-cli/action@v4
