--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "allowJs": true,
-    "types": ["@astrojs/image/client"],
+    "types":  ["vite/client"],
     "baseUrl": ".",
     "paths": {
       "~/*": [
