ビルド失敗時に再ビルド

--- a/.github/workflows/workflow_dispatch_develop.yaml
+++ b/.github/workflows/workflow_dispatch_develop.yaml
@@ -19,6 +19,18 @@ jobs:
       - run: |
           yarn install --immutable && \
           yarn build --immutable
+        env:
+          RETRY_LIMIT: 3 # 再試行の最大回数を定義
+      - name: Check if build was successful
+        if: failure() # 前のステップが失敗した場合
+        run: |
+          retry_count=1
+          while [ "$retry_count" -le "$RETRY_LIMIT" ] && [ ! -d "./dist" ]; do
+            echo "Retrying build... ($retry_count/$RETRY_LIMIT)"
+            yarn build
+            ((retry_count++))
+            sleep 3m  # ウェイト時間
+          done
       # SSH 設定
       - name: SSH Deploy
         uses: shimataro/ssh-key-action@v2
